# solbay

./: .gitignore  BRAND.md  CHANGELOG.md  CLAUDE.md  README.md  __init__.py  oscar-architecture.md  plugin.yaml  release-please-config.json  solilos-architecture.md
.claude/skills/autoloop-issues/: SKILL.md  USAGE.md  state-template.json
.claude/skills/autoloop-issues/stages/: builder.md  planner.md  verify.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-images.yml  ci.yml  release-please.yml
abs-mcp/: Dockerfile  README.md  pyproject.toml
abs-mcp/src/abs_mcp/: __init__.py  __main__.py  abs_client.py  config.py  logging.py  server.py
abs-mcp/tests/: test_abs_client.py  test_server.py
database/: Dockerfile  README.md  alembic.ini  pyproject.toml
database/migrations/: env.py
database/migrations/versions/: 20260516_0001_baseline.py  20260525_0002_add_token_counts.py  20260528_0003_voice_pe_rooms.py  20260608_0005_session_topics.py  20260608_0006_mentions.py  20260610_0008_session_traces_profile.py  20260612_0009_engine_sessions.py  20260612_0010_engine_cron_runs.py  20260612_0011_session_traces_tool_steps.py  20260613_0012_voice_uid_stash.py  20260613_0014_enroll_requests.py
docs/: getting-started.md
hermes-chat/: Dockerfile  README.md  pyproject.toml
hermes-chat/src/oscar_chat/: __main__.py  hermes.py  logging.py  server.py
hermes-chat/src/oscar_chat/static/: index.html  markdown.js
hermes-chat/src/solilos_chat/: __main__.py  config.py  config_agent.py  context.py  hermes.py  marker.py  reasoning.py  server.py  skills.py
hermes-chat/src/solilos_chat/static/: index.html  markdown.js
hermes-chat/tests/: test_attachments.py  test_compaction.py  test_config_agent.py  test_context.py  test_marker.py  test_reasoning.py  test_server.py
scripts/: box-regression.sh
skills/: README.md
skills/media-ingestion-multimodal/: SKILL.md
skills/status/: SKILL.md
solilos-chat/: README.md  pyproject.toml
solilos-chat/scripts/: bench_chat.py  bench_models.py
solilos-chat/src/solilos_chat/: __main__.py  attachments.py  compaction.py  config.py  config_agent.py  enroll_requests_store.py  hermes.py  logging.py  mentions_store.py  pending_residents_store.py  personalities.py  reasoning.py  server.py  settings_store.py  topics_store.py  trace_proxy.py  trace_store.py  voice_uid_stash.py
solilos-chat/src/solilos_chat/engine/: __init__.py  bus.py  client.py  crons.py  facade.py  ollama.py  profiles.py  registry.py  residents.py  scheduler.py  store.py  trace.py  vram.py
solilos-chat/src/solilos_chat/static/: index.html  markdown.js
solilos-chat/tests/: test_crons.py  test_engine.py  test_enrol.py  test_facade.py  test_gateway_routing.py  test_ha.py  test_header_declutter.py  test_hermes_create_session.py  test_mentions.py  test_model_pull.py  test_onboarding_approval.py  test_pending_residents.py  test_reasoning.py  test_server.py  test_settings_store.py  test_tag_cloud.py  test_topics.py  test_trace_panel.py  test_trace_proxy.py  test_trace_store.py
stacks/oscar/: README.md  stack.yml
stacks/solbay/: README.md  stack.yml
templates/admin-soul/: post-deploy.py  template.yml  variables.json
templates/admin-soul/skills/admin-act/: SKILL.md
templates/admin-soul/skills/admin-diagnose/: SKILL.md
templates/admin-soul/skills/admin-logs/: SKILL.md
templates/hermes/: CHANGELOG.md  README.md  SOUL.md  post-deploy.py  template.yml  user-guide.md  variables.json
templates/hermes-chat/: README.md  post-deploy.py  template.yml  variables.json
templates/hermes-webui/: template.yml
templates/ollama/: CHANGELOG.md  README.md  post-deploy.py  template.yml  variables.json
templates/ollama/migrations/: v1-to-v2.py  v2-to-v3.py  v3-to-v4.py  v4-to-v5.py
templates/oscar-household/: post-deploy.py  template.yml  variables.json
templates/oscar-household/skills/: README.md
templates/oscar-household/skills/audit-query/: SKILL.md
templates/oscar-household/skills/daily-chronicle/: SKILL.md
templates/oscar-household/skills/debug-set/: SKILL.md
templates/oscar-household/skills/dynamic-skills/: SKILL.md
templates/oscar-household/skills/media-ingestion-multimodal/: SKILL.md
templates/oscar-household/skills/notes-search/: SKILL.md
templates/oscar-household/skills/status/: SKILL.md
templates/solbay/: README.md  post-deploy.py  template.yml  variables.json
templates/solbay/skills/: README.md
templates/solbay/skills/audit-query/: SKILL.md
templates/solbay/skills/daily-chronicle/: SKILL.md
templates/solbay/skills/debug-set/: SKILL.md
templates/solbay/skills/dynamic-skills/: SKILL.md
templates/solilos/: SOUL.md  post-deploy.py  template.yml  variables.json
templates/solilos-chat/: README.md  post-deploy.py  template.yml  variables.json
templates/tests/: test_admin_soul_token.py  test_engine_topology.py  test_gateway_topology.py  test_ha_jellyfin.py  test_hermes_config.py  test_ollama_anti_eviction.py  test_ollama_warm_load.py  test_profile_provisioning.py  test_sb_mcp_token.py  test_solbay_mcp_block.py  test_soul_provisioning.py  test_voice_pipeline.py
tts-martin/: german_text_rules.py  main.py  tts_normalizer.py
voice-gatekeeper/: Dockerfile  README.md  pyproject.toml
voice-gatekeeper/src/gatekeeper/: __init__.py  __main__.py  config.py  embeddings_store.py  enroll_stash.py  enrollment.py  handler.py  hermes.py  logging.py  marker.py  mcp_server.py  push.py  reasoning.py  rooms.py  rooms_store.py  speaker.py  uid_stash.py
voice-gatekeeper/tests/: test_config.py  test_enroll_stash.py  test_handler.py  test_hermes.py  test_marker.py  test_mcp_server.py  test_reasoning.py  test_rooms.py  test_rooms_store.py  test_speaker.py  test_stt_provider.py  test_uid_stash.py
(+27 files in other folders)
