[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solilos-gatekeeper"
version = "0.1.0"
description = "Solilos Wyoming-to-Hermes bridge — Wyoming server that drives Whisper/Piper and hands off conversation to Hermes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael Dopp", email = "mdopp79@gmail.com" }]
dependencies = [
  # wyoming>=1.6 made `version` a required positional on AsrProgram /
  # AsrModel / TtsProgram. The previous `>=1.5.0` open pin meant fresh
  # image builds installed 1.9.x and the missing kwarg crashed every
  # connection (#1024). Pin to >=1.9 explicitly so the constructor
  # contract matches the call sites in __main__.py; widen back when a
  # 2.x release stabilises the shape.
  "wyoming>=1.9.0,<2.0",
  "httpx>=0.27",
  "aiohttp>=3.9",
  # Room set/list exposed to Hermes as a streamable-HTTP MCP tool server
  # (#104). uvicorn is pinned explicitly because the MCP server runs its
  # own ASGI app beside the aiohttp push server.
  "mcp>=1.2",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "pytest-aiohttp>=1.0",
  "pytest-cov>=4",
  "numpy>=1.26",
]
# Phase-2 speaker-ID (#937). The stock gatekeeper image does NOT install
# these — SpeechBrain pulls in torch, which adds ~1 GB to the image and
# needs a separate CI build. Operators wanting Speaker-ID build a custom
# image with `pip install /app[speaker-id]` and set
# SOLILOS_SPEAKER_ID_ENABLED=1 in the wizard. With the deps absent the
# resolver short-circuits to DEFAULT_UID so the conversation pipeline
# stays unaffected.
speaker-id = [
  "speechbrain>=1.0",
  "torch>=2.1",
  "numpy>=1.26",
]

[project.scripts]
gatekeeper = "gatekeeper.__main__:main"

[project.urls]
Homepage = "https://github.com/mdopp/solbay"
Spec = "https://github.com/mdopp/solbay/blob/main/voice-gatekeeper/README.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gatekeeper*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
